fix missing ref and broken styles

--- a/components/Create/CreateFail/CreateFail.module.scss
+++ b/components/Create/CreateFail/CreateFail.module.scss
@@ -18,6 +18,10 @@
   top: 110px;
 }
 
+.oopsJoke {
+  margin-bottom: 8px;
+}
+
 .oopsLottie {
   left: 0;
   position: absolute;
